--- a/css/common.css
+++ b/css/common.css
@@ -74,15 +74,19 @@ header{
 }
 
 #header_bottom{
-    width: 600px;
+    width: 100%;
     height: 66px;
+    display: flex;
+    justify-content: flex-end;
     background-color: beige;
+  
 }
 
 #mainmenu{
-    width: 100%;
+    width: 600px;
     height: 100%;
     font: normal 18px/27px 'Noto Sans';
+    margin-right: 200px;
     display: flex;
     justify-content: center;
     flex-direction: row;
