--- a/css/common.css
+++ b/css/common.css
@@ -29,7 +29,7 @@ ul#skipmenu_list li a:focus {
 #header_wrap{
     width: 100%;
     height: 189px;
-    background: red;
+    background: beige;
 }
 
 header{
@@ -39,8 +39,7 @@ header{
 
 #header_top{
     width: 100%;
-    height: 123px;
-    background: yellow;
+    height: 121px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,7 +77,6 @@ header{
     height: 66px;
     display: flex;
     justify-content: flex-end;
-    background-color: beige;
   
 }
 
@@ -92,9 +90,23 @@ header{
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    background-color: aquamarine;
+    position: relative;
+    left: 0px;
+    top: 0px;
 }
 
 .sub_wrap{
-    display: none;
+    position: relative;
+    left: 0px;
+    top: 0px;  
+}
+
+.sub{
+    background-color: rebeccapurple;
+    width: 1200px;
+    height: 444px;
+    position: absolute;
+    top: 0px;
+    left: -600px;
+    margin-left: 50%;
 }
