--- a/css/common.css
+++ b/css/common.css
@@ -111,9 +111,30 @@ header{
     top: 48px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+}
+
+#field_title{
+    position: absolute;
+    top: 20px;
+    left: 100px;
+}
+
+.sub_list_wrap{
+    width: 200px;
+    background: red;
 }
 
 .sub{
-   
+    margin-top:30px
+}
+
+.sub_list{
+    margin-bottom:10px;
+    text-align: center;
+
+}
+
+.sub_list:last-child{
+    margin-bottom: 0px;
 }
