--- a/css/common.css
+++ b/css/common.css
@@ -83,7 +83,7 @@ header{
 #mainmenu{
     width: 600px;
     height: 100%;
-    font: normal 18px/27px 'Noto Sans';
+    font: normal 16px/24px 'Noto Sans';
     margin-right: 200px;
     display: flex;
     justify-content: center;
@@ -122,24 +122,46 @@ header{
 
 #sub_list_wrap_title{
     background: yellow;
-    margin-right: 200px;
+    position: absolute;
+    left: 100px;
 }
 
 .sub_list_wrap{
     width: 200px;
     background: red;
+
 }
 
 .sub{
-    margin-top:30px
+    
+}
+
+.sub_all_list_wrap{
+    display: flex;
+    position: absolute;
+    left: 200px;
+    top: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .sub_list{
-    margin-bottom:10px;
+    margin-bottom:12px;
     text-align: center;
+    font: normal 16px/24px 'Noto Sans';
 
 }
 
 .sub_list:last-child{
     margin-bottom: 0px;
+}
+
+.first_sub_title{
+    position: absolute;
+    top: -40px;
+    left: 68px;
+}
+
+.one,.two{
+    display: none;
 }
