--- a/css/common.css
+++ b/css/common.css
@@ -101,8 +101,24 @@ header{
     right: 0px;  
 }
 
+
+
+.mainmenu_list>a:after{
+    display:block;
+    content: '';
+    border-bottom: solid 2px #80140B;  
+    transform: scaleX(0);  
+    transition: transform 200ms ease-out;
+    transform-origin:0% 50%;
+}
+
+.mainmenu_list>a:hover:after{
+    transform:scaleX(1);
+}
+
+
 .sub_wrap{
-    background-color: rebeccapurple;
+    background-color: rgb(255, 255, 255);
     width: 1200px;
     height: 400px;
     position: absolute;
@@ -112,6 +128,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    border-radius: 0px 0px 35px 35px;
 }
 
 #field_title{
@@ -123,7 +140,6 @@ header{
 
 .sub_list_wrap{
     width: 200px;
-
 }
 
 #sub_list_wrap_title{
@@ -137,13 +153,13 @@ header{
     height: 292px;
     background-color: black;
     position: absolute;
-    left: 200px;
+    left: 250px;
 }
 
 .sub_in_title{
     width: 200px;
     text-align: center;
-    font: normal 18px/26px 'Noto Sans';
+    font: normal 16px/24px 'Noto Sans';
 }
 
 .sub_in_title{
@@ -153,7 +169,7 @@ header{
 
 
 .sub_in_title:hover{
-    font: bold 18px/26px 'Noto Sans';
+    font: bold 16px/24px 'Noto Sans';
     color: #176AB3;
 }
 
@@ -174,7 +190,7 @@ header{
 .sub_list{
     margin-bottom:12px;
     text-align: center;
-    font: normal 16px/24px 'Noto Sans';
+    font: normal 14px/21px 'Noto Sans';
 
 }
 
@@ -183,7 +199,7 @@ header{
 }
 
 .sub_list:hover{
-    font: bold 16px/24px 'Noto Sans';
+    font: bold 14px/21px 'Noto Sans';
 }
 
 .sub_title{
@@ -199,6 +215,6 @@ header{
     left: 270px;
 }
 
-.one,.two,.three,.four,.five,.six,.seven{
+.two,.three,.four,.five,.six,.seven,.eight{
     display: none;
 }
