--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,10 @@
     position: absolute;
 }
 
+body{
+    background:bisque;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -29,7 +33,6 @@ ul#skipmenu_list li a:focus {
 #header_wrap{
     width: 100%;
     height: 189px;
-    background: beige;
 }
 
 header{
@@ -106,7 +109,7 @@ header{
 .mainmenu_list>a:after{
     display:block;
     content: '';
-    border-bottom: solid 2px #80140B;  
+    border-bottom: solid 2px #176AB3;;  
     transform: scaleX(0);  
     transition: transform 200ms ease-out;
     transform-origin:0% 50%;
@@ -127,8 +130,9 @@ header{
     top: 48px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    border-radius: 0px 0px 35px 35px;
+    justify-content: center;
+
+    /* visibility: hidden; */
 }
 
 #field_title{
@@ -145,6 +149,7 @@ header{
 #sub_list_wrap_title{
     position: absolute;
     left: 100px;
+
     /* visibility: hidden; */
 }
 #sub_list_wrap_title::before{
@@ -168,10 +173,11 @@ header{
 
 
 
-.sub_in_title:hover{
+.sub_in_title>a:hover{
     font: bold 16px/24px 'Noto Sans';
     color: #176AB3;
 }
+
 
 .sub li:last-child{
     margin-bottom:0px;
@@ -188,6 +194,7 @@ header{
 }
 
 .sub_list{
+    width: 200px;
     margin-bottom:12px;
     text-align: center;
     font: normal 14px/21px 'Noto Sans';
@@ -198,7 +205,7 @@ header{
     margin-bottom: 0px;
 }
 
-.sub_list:hover{
+.sub_list>a:hover{
     font: bold 14px/21px 'Noto Sans';
 }
 
