--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 #main_wrap{
     width: 100%;
+    height: 939px;
 }
 
 #main_image{
@@ -51,6 +52,30 @@
 
 .title_down{
     top: 550px;
+}
+
+/*메인끝*/
+
+/*컨텐츠시작*/
+
+#content_wrap{
+    width: 100%;
+    height: 1000px;
+}
+
+#today_book_wrap{
+    width: 100%;
+    height: 660px;
+    display: flex;
+    background: #176AB3;
+    margin-top: 130px;
+}
+
+#today_book_list{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 
