--- a/css/main.css
+++ b/css/main.css
@@ -72,9 +72,12 @@
     position: relative;
 }
 
-#today_book_main_title{
+.today_book_main_title{
     position: absolute;
-    top: 0px;
+    left: 37px;
+    top: 22px;
+    font: normal 30px/45px 'YES24';
+    color: white;
 }
 
 #today_book_list{
@@ -83,5 +86,33 @@
     align-items: center;
     justify-content: space-evenly;
 }
+
+#today_book_list li{
+    position: relative;
+}
+
+.today_book_info{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.9);
+    position: absolute;
+    top: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    visibility: hidden;
+}
+
+.toady_book_title{
+    font: bold 22px/33px 'Noto Sans';
+}
+
+.today_book_price{
+    margin-top: 20px;
+    font: normal 16px/24px 'Noto Sans';
+}
+ 
 
 
