--- a/css/main.css
+++ b/css/main.css
@@ -114,12 +114,14 @@
     font: normal 16px/24px 'Noto Sans';
 }
 
-#tab_content{
+
+
+/* #tab_content{
     width: 100%;
     background-color: red;
-}
+} */
 
-#pick_book_wrap{
+/* #pick_book_wrap{
     width: 100%;
     height: 1071px;
     display: flex;
@@ -145,4 +147,4 @@
 }
  
 
-
+ */
