--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
     height: 800px;
     background: red;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding-top: 50px;
+    padding-top: 160px;
     box-sizing: border-box;
 }
 
@@ -198,10 +198,18 @@
 }
 
 #books_pick_list{
-    margin-top: 75px;
+    margin-top: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+#books_pick_list li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font: normal 16px/24px 'Noto Sans';
 }
 
 #tab_side_title_wrap{
@@ -209,10 +217,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 #tab_side_title_wrap p{
     margin-left: 15px;
+    font: normal 16px/24px 'Noto Sans';
 }
 #tab_side_title_wrap p:first-child{
     margin-left: 0px;
@@ -233,4 +243,18 @@
     background: black;
     position: absolute;
     right: 908px;
+}
+
+.tab_main_title{
+    font: bold 30px/45px 'Noto Sans';
+    margin-left: 39px;
+}
+
+.tab_in_up_title{
+    margin-top: 10px;
+    color: #176AB3;
+}
+
+.tab_in_info{
+    margin-top: 10px;
 }
