--- a/css/main.css
+++ b/css/main.css
@@ -125,8 +125,7 @@
 
 .tab_item{
     width: calc(100%/8);
-    height: 50px;
-    border-bottom: 3px solid #333333;
+    height: 60px;
     background-color: #f8f8f8;
     line-height: 50px;
     font-size: 16px;
@@ -139,7 +138,8 @@
     transition: all 0.2s ease;
   }
   .tab_item:hover{
-    transform: scaleY(1.1);
+    transform: scale(1,1.3);
+    background-color: #ECECEC;
   }
   
   input[name="tab_item"]{
