--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,6 @@
 #tabmenu_wrap{
     width: 100%;
     height: 800px;
-    background: red;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding-top: 160px;
     box-sizing: border-box;
@@ -163,7 +162,7 @@
 #book_pick:checked ~ #book_content,
 #ebook_pick:checked ~ #ebook_content,
 #comic_pick:checked ~ #comic_content,
-#cd_lp_pick:checked ~ #cd_lp_content
+#cd_lp_pick:checked ~ #cd_lp_content,
 #dvd_pick:checked ~ #dvd_content,
 #ticket_pick:checked ~ #ticket_content,
 #Phrases_pick:checked ~ #phrases_content,
@@ -171,10 +170,6 @@
   display: block;
 }
 
-/* #tab_content{
-    width: 100%;
-    background-color: red;
-} */
 
 #pick_book_wrap{
     width: 100%;
@@ -197,14 +192,17 @@
     align-items: center;
 }
 
-#books_pick_list{
+.books_pick_list{
+    width: 100%;
+    height: 500px;
     margin-top: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-#books_pick_list li{
+.books_pick_list li{
+    width: calc(100%/3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -212,7 +210,7 @@
     font: normal 16px/24px 'Noto Sans';
 }
 
-#tab_side_title_wrap{
+.tab_side_title_wrap{
     margin-top: 30px;
     display: flex;
     align-items: center;
@@ -220,19 +218,19 @@
     
 }
 
-#tab_side_title_wrap p{
+.tab_side_title_wrap p{
     margin-left: 15px;
     font: normal 16px/24px 'Noto Sans';
 }
-#tab_side_title_wrap p:first-child{
+.tab_side_title_wrap p:first-child{
     margin-left: 0px;
 }
 
-#tab_side_title_wrap p:hover{
+.tab_side_title_wrap p:hover{
     font: bold 16px/24px 'Noto Sans';
 }
 
-#tab_side_title_wrap::after{
+.tab_side_title_wrap::after{
     content: "";
     width: 1px;
     height: 18px;
@@ -240,7 +238,7 @@
     position: absolute;
     right: 986px;
 }
-#tab_side_title_wrap::before{
+.tab_side_title_wrap::before{
     content: "";
     width: 1px;
     height: 18px;
@@ -261,4 +259,8 @@
 
 .tab_in_info{
     margin-top: 10px;
+}
+
+.tab_side_hidden{
+    visibility: hidden;
 }
