--- a/css/main.css
+++ b/css/main.css
@@ -114,9 +114,12 @@
     font: normal 16px/24px 'Noto Sans';
 }
 
+
+/*탭메뉴리스트*/
+
 #tabmenu_wrap{
     width: 100%;
-    height: 800px;
+    height: 1077px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding-top: 160px;
     box-sizing: border-box;
@@ -263,4 +266,34 @@
 
 .tab_side_hidden{
     visibility: hidden;
+}
+
+/*탭메뉴리스트끝*/
+
+/*미니광고*/
+
+#mini_advertisement_wrap{
+    width: 100%;
+    height: 468px;
+    background-color: #176AB3;
+}
+
+#mini_advertisement_list{
+    width: 300%;
+    height: 245px;
+    display: flex;
+    align-items: center;
+    background: rgb(185, 185, 185);
+}
+#mini_advertisement_list li{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font: normal 30px/45px 'Yes24';
+}
+
+#mini_advertisement_list li:first-child{
+    background: #FDF6C9;
 }
