--- a/css/main.css
+++ b/css/main.css
@@ -315,3 +315,34 @@
     background: #5037D5;
     opacity: 0;
 }
+
+/*미니광고끝*/
+
+/*하단책소개*/
+
+#book_explanation_wrap{
+    width: 100%;
+    height: 549px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: red;
+}
+
+#book_explanation{
+    width: 1200px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#book_explanation_box{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#book_explanation_box li{
+    width: 50%;
+    display: flex;
+}
