--- a/css/common.css
+++ b/css/common.css
@@ -233,3 +233,56 @@ header{
 }
 
 /*헤더 끝*/
+
+/*푸터시작*/
+
+footer{
+    width: 100%;
+    height: 342px;
+    display: flex;
+    justify-content: center;
+    background: #EAEAEA;
+}
+
+#footer_wrap{
+    width: 1200px;
+    height: 100%;
+    background: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#footer_up{
+    width: 80%;
+    height: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font: normal 14px/21px 'Noto Sans';
+    color: #787878;
+}
+
+#footer_down{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+#footer_logo{
+    width: 30%;
+    height: 100%;
+    text-align: center;
+    font: normal 14px/21px 'Noto Sans';
+    color: #949494;
+}
+
+#footer_logo p{
+    margin-top: 10px;
+}
+
+#footer_info{
+    width: 50%;
+    height: 100%;
+    background: yellow;
+}
